formatted and cleaned the code

--- a/public/css/tailwind.css
+++ b/public/css/tailwind.css
@@ -23,6 +23,7 @@ body {
   width: 75vw;
 }
 
+/* Remove number input arrow buttons on transaction page */
 input::-webkit-outer-spin-button.without-arrow,
 input::-webkit-inner-spin-button.without-arrow {
   -webkit-appearance: none;
@@ -42,7 +43,8 @@ input[type="number"].without-arrow {
   -webkit-text-fill-color: transparent;
 }
 
-.notification .badge {
+/* Edit icon */
+.icon .badge {
   position: absolute;
   top: -5px;
   right: -5px;
@@ -52,12 +54,12 @@ input[type="number"].without-arrow {
   color: white;
 }
 
-/* search bar */
+/* Search bar */
 #searchbar:focus .search-list {
   display: block;
 }
 
-/* Login Page */
+/* Login Page animations */
 animated {
   -webkit-animation-duration: 1s;
   animation-duration: 1s;
@@ -120,6 +122,7 @@ animated {
   transition: 0.4s all ease-in-out;
   transform: translateY(50%);
 }
+
 /* Share button */
 .share.showAddThisButtons > .container {
   opacity: 1;
