--- a/views/error/404.ejs
+++ b/views/error/404.ejs
@@ -1,7 +1,5 @@
 <div class="flex justify-center items-center m-2 max-w-xs">
-  <div
-    class="bg-white rounded-lg shadow-xl py-10 px-2"
-  >
+  <div class="bg-white rounded-lg shadow-xl py-10 px-2">
     <div class="mb-4">
       <h1 class="text-center text-6xl font-bold">
         4 <i class="text-blue-600 fas fa-frown"></i> 4
