--- a/views/view.ejs
+++ b/views/view.ejs
@@ -49,7 +49,7 @@
     <h2 class="text-xl font-bold mb-1">Overview</h2>
     <section
       class="chart-container relative w-full bg-white shadow-md rounded px-4 pt-2 pb-4 mb-8"
-      style="height: 50vh;"
+      style="height: 50vh"
     >
       <canvas id="chart"></canvas>
     </section>
