changed classname  to icon from notification

--- a/views/partials/_nav.ejs
+++ b/views/partials/_nav.ejs
@@ -53,7 +53,7 @@
     <hr class="border-2 border-gray-700 mb-4" />
 
     <div class="flex justify-center align-center rounded-full">
-      <div class="notification relative inline-block">
+      <div class="icon relative inline-block">
         <img
           class="w-24 border-8 rounded-full border-8 border-blue-900 box-1 rounded-full"
           src="<%= user.image %>"
