Added links for contact and improved testimonials

--- a/views/done.ejs
+++ b/views/done.ejs
@@ -7,7 +7,7 @@
       <h1 class="heading font-bold mb-2 text-6xl text-center text-green-700">
         Done
       </h1>
-      <div class="flex justify-center items-center text-green-400">
+      <div class="flex justify-center items-center text-green-400 my-6">
         <i id="check" class="far fa-check-circle fa-7x"></i>
       </div>
       <div>
@@ -15,7 +15,7 @@
           Thank you for using TradeByte
         </p>
       </div>
-      <div class="flex justify-center items-center">
+      <div class="flex justify-center items-center mt-4">
         <button
           onClick="back()"
           class="bg-gray-700 hover:bg-red-400 text-white font-bold py-2 px-3 md:px-5 mx-2 mt-4 mb-3 rounded-full"
@@ -29,7 +29,7 @@
         >
           <i class="fas fa-share-alt"></i> Share
           <div
-            class="container absolute top-0 left-0 w-48 bg-white shadow-lg rounded mt-10 mb-12 -ml-16 sm:ml-0"
+            class="container absolute top-0 left-0 w-48 bg-white shadow-lg rounded mt-10 mb-12 -ml-12 sm:ml-0"
           >
             <div
               class="addthis_inline_share_toolbox text-center"
