--- a/views/login.ejs
+++ b/views/login.ejs
@@ -276,9 +276,7 @@
                   Working with TradeByte team was a great experience! Thanks to
                   our mentor Pavan and other active members who made the project
                   possible. I love the final app with all the features. I
-                  learned a lot of things I never knew before and successfully
-                  completed all the tasks, it was really fun to collaborate with
-                  others.
+                  learned and worked on backend for the first time so I was scared but it turned out really well and I learned a lot apart from code like working with a team. The tasks were cool and challenging and I am proud to say I completed them all and even did extra work. Really loved the collaboration with the team.
                 </p>
               </div>
 
@@ -287,15 +285,9 @@
                   class="text-gray-600 serif font-normal italic px-6 py-6 md:py-12 lg:px-16 md:py-6 text-md lg:text-xl"
                   x-show.transition="testimonialActive == 3"
                 >
-                  I had a great learning experience here, and throughout the
-                  Uplift project we develop 3 apps including the main project.
-                  Pavan Gandhi our mentor, he created a well organised
-                  curriculum which Cover all the basics topics to the advance
-                  topics needed to create the main project. And also he managed
-                  us and assigned us task according to our area of interest. And
-                  also had a great team members and i was great to work with
-                  these guys and we may do some other projects together in
-                  future.
+                  I had a great learning experience here, we developed 3 apps including the main project.
+                  Our mentor Pavan created a well great curriculum which covered all topics from basic to the advanced
+                  needed to create the main project. He managed the team very well and assigned us task according to our area of interest. TradeByte team members were great to work with. I would like to do some project together again in future.
                 </p>
               </div>
 
@@ -328,9 +320,9 @@
                   class="text-gray-600 serif font-normal italic px-6 py-6 md:py-12 lg:px-16 md:py-6 text-md lg:text-xl"
                   x-show.transition="testimonialActive == 6"
                 >
-                  Tradebyte was my lovely project on working with open-source
-                  technologies and following AGILE principles we had awesome
-                  learnings and delivering the code on Fly. kudos to the team
+                  Tradebyte was a lovely project. Working with open-source
+                  technologies to following AGILE principles we had awesome
+                  learnings and delivering the code on Fly. Kudos to the team
                   for helping each other and making it to the production-ready
                   app.
                 </p>
@@ -401,6 +393,13 @@
                   <small class="text-gray-500 text-xs md:text-sm truncate"
                     >Maintainer & Contributor, TradeByte</small
                   >
+                  <p class="text-gray-800 text-2xl truncate">
+                    <a target="_blank" href="https://www.linkedin.com/in/iampavangandhi/"><i class="mr-2 fab fa-linkedin"></i></a>
+                    <a target="_blank" href="https://www.instagram.com/iampavangandhi/""><i class="mr-2 fab fa-instagram"></i></a>
+                    <a target="_blank" href="https://twitter.com/iampavangandhi"><i class="mr-2 fab fa-twitter-square"></i></a>
+                    <a target="_blank" href="https://github.com/iampavangandhi"><i class="mr-2 fab fa-github"></i></a>
+                    <a target="_blank" href="mailto:pavangandhi100@gmail.com"><i class="fas fa-envelope"></i></a>
+                  </p>
                 </div>
               </div>
 
@@ -422,6 +421,13 @@
                   <small class="text-gray-500 text-xs md:text-sm truncate"
                     >Contributor, TradeByte</small
                   >
+                  <p class="text-gray-800 text-2xl truncate">
+                    <a target="_blank" href="https://www.linkedin.com/in/fabcodingzest/"><i class="mr-2 fab fa-linkedin"></i></a>
+                    <a target="_blank" href="https://twitter.com/fabcodingzest/"><i class="mr-2 fab fa-instagram"></i></a>
+                    <a target="_blank" href="https://www.twitter.com/fabcodingzest/"><i class="mr-2 fab fa-twitter-square"></i></a>
+                    <a target="_blank" href="https://github.com/fabcodingzest/"><i class="mr-2 fab fa-github"></i></a>
+                    <a target="_blank" href="mailto:fabcodingzest@gmail.com"><i class="fas fa-envelope"></i></a>
+                  </p>
                 </div>
               </div>
 
@@ -443,6 +449,13 @@
                   <small class="text-gray-500 text-xs md:text-sm truncate"
                     >Contributor, TradeByte</small
                   >
+                  <p class="text-gray-800 text-2xl truncate">
+                    <a target="_blank" href="https://www.linkedin.com/in/somyaranjanrout/"><i class="mr-2 fab fa-linkedin"></i></a>
+                    <a target="_blank" href="https://www.instagram.com/somyaranjan_26/""><i class="mr-2 fab fa-instagram"></i></a>
+                    <a target="_blank" href="https://twitter.com/somyaranjancr7"><i class="mr-2 fab fa-twitter-square"></i></a>
+                    <a target="_blank" href="https://github.com/somyaranjan26"><i class="mr-2 fab fa-github"></i></a>
+                    <a target="_blank" href="mailto:somyaranjanmac1@gmail.com"><i class="fas fa-envelope"></i></a>
+                  </p>
                 </div>
               </div>
 
@@ -464,6 +477,11 @@
                   <small class="text-gray-500 text-xs md:text-sm truncate"
                     >Contributor, TradeByte</small
                   >
+                  <p class="text-gray-800 text-2xl truncate">
+                    <a target="_blank" href="https://www.linkedin.com/in/garima-singh-190b35170/"><i class="mr-2 fab fa-linkedin"></i></a>
+                    <a target="_blank" href="https://github.com/garimasingh22"><i class="mr-2 fab fa-github"></i></a>
+                    <a target="_blank" href="mailto:10garima22ii@gmail.com"><i class="fas fa-envelope"></i></a>
+                  </p>
                 </div>
               </div>
 
@@ -485,6 +503,10 @@
                   <small class="text-gray-500 text-xs md:text-sm truncate"
                     >Contributor, TradeByte</small
                   >
+                  <p class="text-gray-800 text-2xl truncate">
+                    <a target="_blank" href="https://github.com/somyaranjan26"><i class="mr-2 fab fa-github"></i></a>
+                    <a target="_blank" href="https://github.com/Anjalikumari148"><i class="fas fa-envelope"></i></a>
+                  </p>
                 </div>
               </div>
 
@@ -506,6 +528,12 @@
                   <small class="text-gray-500 text-xs md:text-sm truncate"
                     >Contributor, TradeByte</small
                   >
+                  <p class="text-gray-800 text-2xl truncate">
+                    <a target="_blank" href="https://www.linkedin.com/in/ankit-pal-632a72109/"><i class="mr-2 fab fa-linkedin"></i></a>
+                    <a target="_blank" href="https://www.instagram.com/howdy_ankit/""><i class="mr-2 fab fa-instagram"></i></a>
+                    <a target="_blank" href="https://github.com/howdyAnkit"><i class="mr-2 fab fa-github"></i></a>
+                    <a target="_blank" href="mailto:palankit35@gmail.com"><i class="fas fa-envelope"></i></a>
+                  </p>
                 </div>
               </div>
             </div>
@@ -556,7 +584,6 @@
           <div class="-mx-4 text-center md:text-right">
             <p class="text-base mb-2">&copy; Copyright TradeByte Team, 2020</p>
             <hr class="my-2 bg-gray-700 border-none" />
-            <p>Email: pavangandhi100@gmail.com</p>
             <p>
               Check and Star ❤️
               <a
