Client side Form Validation done on both sign in & sign up with pattern in password

--- a/views/layouts/login.ejs
+++ b/views/layouts/login.ejs
@@ -28,5 +28,6 @@
     <%- body %>
 
     <script src="javascript/script.js"></script>
+    <script src="../javascript/script.js"></script>
   </body>
 </html>
