transaction pg responsiveness fixed for extra small(320px) devices

--- a/views/transaction/transaction.ejs
+++ b/views/transaction/transaction.ejs
@@ -47,7 +47,7 @@
               </td>
               <td class="border py-2">
                 <input
-                  class="text-right px-2 transaction-input text-sm sm:text-xl"
+                  class="text-right sm:px-2 transaction-input text-sm sm:text-xl"
                   readonly
                   type="text"
                   name="companySymbol"
@@ -59,7 +59,7 @@
               <td class="border py-2 px-2 text-sm sm:text-xl">Stock Price:</td>
               <td class="border py-2">
                 <input
-                  class="text-right px-2 bg-gray-100 transaction-input text-sm sm:text-xl without-arrow"
+                  class="text-right sm:px-2 bg-gray-100 transaction-input text-sm sm:text-xl without-arrow"
                   readonly
                   type="Number"
                   name="stockPrice"
@@ -73,7 +73,7 @@
               </td>
               <td class="border py-2">
                 <input
-                  class="text-right px-2 transaction-input text-sm sm:text-xl without-arrow"
+                  class="text-right sm:px-2 transaction-input text-sm sm:text-xl without-arrow"
                   readonly
                   type="number"
                   name="noOfStock"
@@ -85,7 +85,7 @@
               <td class="border py-2 px-2 text-sm sm:text-xl">Total Amount:</td>
               <td class="border py-2">
                 <input
-                  class="text-right px-2 bg-gray-100 transaction-input text-sm sm:text-xl without-arrow"
+                  class="text-right sm:px-2 bg-gray-100 transaction-input text-sm sm:text-xl without-arrow"
                   readonly
                   type="number"
                   name="totalAmount"
