--- a/views/login.ejs
+++ b/views/login.ejs
@@ -423,7 +423,7 @@
                   >
                   <p class="text-gray-800 text-2xl truncate">
                     <a target="_blank" href="https://www.linkedin.com/in/fabcodingzest/"><i class="mr-2 fab fa-linkedin"></i></a>
-                    <a target="_blank" href="https://twitter.com/fabcodingzest/"><i class="mr-2 fab fa-instagram"></i></a>
+                    <a target="_blank" href="https://instagram.com/fabcodingzest/"><i class="mr-2 fab fa-instagram"></i></a>
                     <a target="_blank" href="https://www.twitter.com/fabcodingzest/"><i class="mr-2 fab fa-twitter-square"></i></a>
                     <a target="_blank" href="https://github.com/fabcodingzest/"><i class="mr-2 fab fa-github"></i></a>
                     <a target="_blank" href="mailto:fabcodingzest@gmail.com"><i class="fas fa-envelope"></i></a>
