--- a/views/error/500.ejs
+++ b/views/error/500.ejs
@@ -1,28 +1,83 @@
-<div class="flex justify-center items-center m-2 max-w-md">
-  <div class="bg-white rounded-lg shadow-xl py-4 px-2">
-    <div class="mb-4 flex justify-center items-center flex-col px-2 sm:px-6">
-      <h1 class="text-4xl text-center text-black font-bold">ERROR 500</h1>
-      <p class="para text-red-600 text-center mb-2 font-semibold">
-        Unexpected error :(
-      </p>
-      <i class="fas fa-cogs fa-7x my-4"></i>
-      <p class="text-black text-center text-xl mt-2">
-        There seems to be a problem
-      </p>
-      <p class="text-black text-center text-xl mt-2">Let's get to back</p>
-    </div>
-    <div>
-      <div class="flex justify-center items-center">
-        <button
-          onclick="back()"
-          class="text-blue-700 hover:bg-blue-100 font-bold py-2 px-4 mb-2 border border-blue-700 rounded"
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>TradeByte</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css"
+      integrity="sha256-46r060N2LrChLLb5zowXQ72/iKKNiw/lAmygmHExk/o="
+      crossorigin="anonymous"
+    />
+    <link
+      href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/style.css" />
+    <link
+      rel="shortcut icon"
+      href="../images/TradeByte-Favicon.png"
+      type="image/x-icon"
+    />
+
+    <style>
+      #error {
+        color: gray;
+      }
+
+      #cogs {
+        display: flex;
+        justify-content: center;
+      }
+      .error {
+        color: #3a7bd5;
+      }
+      .container {
+        width: 450px;
+      }
+
+      h1 {
+        font-size: 100px;
+        font-weight: bold;
+      }
+
+      .para {
+        font-weight: bold;
+      }
+    </style>
+  </head>
+
+  <body class="flex justify-center items-center min-h-screen">
+    <div class="flex justify-center items-center m-2 max-w-md">
+      <div class="bg-white rounded-lg shadow-xl py-4 px-2">
+        <div
+          class="mb-4 flex justify-center items-center flex-col px-2 sm:px-6"
         >
-          Go to Homepage
-        </button>
+          <h1 class="text-4xl text-center text-black font-bold">ERROR 500</h1>
+          <p class="para text-red-600 text-center mb-2 font-semibold">
+            Unexpected error :(
+          </p>
+          <i class="fas fa-cogs fa-7x my-4"></i>
+          <p class="text-black text-center text-xl mt-2">
+            There seems to be a problem
+          </p>
+          <p class="text-black text-center text-xl mt-2">Let's get to back</p>
+        </div>
+        <div>
+          <div class="flex justify-center items-center">
+            <button
+              onclick="back()"
+              class="text-blue-700 hover:bg-blue-100 font-bold py-2 px-4 mb-2 border border-blue-700 rounded"
+            >
+              Go to Homepage
+            </button>
+          </div>
+        </div>
       </div>
     </div>
-  </div>
-</div>
+  </body>
+</html>
 
 <!-- JavaScript -->
 
