--- a/views/login.ejs
+++ b/views/login.ejs
@@ -261,10 +261,12 @@
                   class="text-gray-600 serif font-normal italic px-6 py-6 md:py-12 lg:px-16 md:py-6 text-md lg:text-xl"
                   x-show.transition="testimonialActive == 1"
                 >
-                  It was fun to mentor a team for the first time while guiding
-                  them through their learning process in 3 months. The active
-                  team members did really well and the project turned out to be
-                  the way I wanted exactly.
+                  It was challenging to plan and implement the project workflow
+                  to maintain the code quality so that the team will contribute
+                  without worrying about other things. It was a fun experience
+                  to mentor a team while guiding them through their learning
+                  process in 3 months. The team did very well and the project
+                  turned out to be the way I wanted.
                 </p>
               </div>
 
@@ -276,7 +278,12 @@
                   Working with TradeByte team was a great experience! Thanks to
                   our mentor Pavan and other active members who made the project
                   possible. I love the final app with all the features. I
-                  learned and worked on backend for the first time so I was scared but it turned out really well and I learned a lot apart from code like working with a team. The tasks were cool and challenging and I am proud to say I completed them all and even did extra work. Really loved the collaboration with the team.
+                  learned and worked on backend for the first time so I was
+                  scared but it turned out really well and I learned a lot apart
+                  from code like working with a team. The tasks were cool and
+                  challenging and I am proud to say I completed them all and
+                  even did extra work. Really loved the collaboration with the
+                  team.
                 </p>
               </div>
 
@@ -285,9 +292,13 @@
                   class="text-gray-600 serif font-normal italic px-6 py-6 md:py-12 lg:px-16 md:py-6 text-md lg:text-xl"
                   x-show.transition="testimonialActive == 3"
                 >
-                  I had a great learning experience here, we developed 3 apps including the main project.
-                  Our mentor Pavan created a well great curriculum which covered all topics from basic to the advanced
-                  needed to create the main project. He managed the team very well and assigned us task according to our area of interest. TradeByte team members were great to work with. I would like to do some project together again in future.
+                  I had a great learning experience here, we developed 3 apps
+                  including the main project. Our mentor Pavan created a well
+                  great curriculum which covered all topics from basic to the
+                  advanced needed to create the main project. He managed the
+                  team very well and assigned us task according to our area of
+                  interest. TradeByte team members were great to work with. I
+                  would like to do some project together again in future.
                 </p>
               </div>
 
@@ -394,11 +405,25 @@
                     >Maintainer & Contributor, TradeByte</small
                   >
                   <p class="text-gray-800 text-2xl truncate">
-                    <a target="_blank" href="https://www.linkedin.com/in/iampavangandhi/"><i class="mr-2 fab fa-linkedin"></i></a>
-                    <a target="_blank" href="https://www.instagram.com/iampavangandhi/""><i class="mr-2 fab fa-instagram"></i></a>
-                    <a target="_blank" href="https://twitter.com/iampavangandhi"><i class="mr-2 fab fa-twitter-square"></i></a>
-                    <a target="_blank" href="https://github.com/iampavangandhi"><i class="mr-2 fab fa-github"></i></a>
-                    <a target="_blank" href="mailto:pavangandhi100@gmail.com"><i class="fas fa-envelope"></i></a>
+                    <a
+                      target="_blank"
+                      href="https://www.linkedin.com/in/iampavangandhi/"
+                      ><i class="mr-2 fab fa-linkedin"></i
+                    ></a>
+                    <a
+                      target="_blank"
+                      href="https://www.instagram.com/iampavangandhi/"
+                      ><i class="mr-2 fab fa-instagram"></i
+                    ></a>
+                    <a target="_blank" href="https://twitter.com/iampavangandhi"
+                      ><i class="mr-2 fab fa-twitter-square"></i
+                    ></a>
+                    <a target="_blank" href="https://github.com/iampavangandhi"
+                      ><i class="mr-2 fab fa-github"></i
+                    ></a>
+                    <a target="_blank" href="mailto:pavangandhi100@gmail.com"
+                      ><i class="fas fa-envelope"></i
+                    ></a>
                   </p>
                 </div>
               </div>
@@ -422,11 +447,27 @@
                     >Contributor, TradeByte</small
                   >
                   <p class="text-gray-800 text-2xl truncate">
-                    <a target="_blank" href="https://www.linkedin.com/in/fabcodingzest/"><i class="mr-2 fab fa-linkedin"></i></a>
-                    <a target="_blank" href="https://instagram.com/fabcodingzest/"><i class="mr-2 fab fa-instagram"></i></a>
-                    <a target="_blank" href="https://www.twitter.com/fabcodingzest/"><i class="mr-2 fab fa-twitter-square"></i></a>
-                    <a target="_blank" href="https://github.com/fabcodingzest/"><i class="mr-2 fab fa-github"></i></a>
-                    <a target="_blank" href="mailto:fabcodingzest@gmail.com"><i class="fas fa-envelope"></i></a>
+                    <a
+                      target="_blank"
+                      href="https://www.linkedin.com/in/fabcodingzest/"
+                      ><i class="mr-2 fab fa-linkedin"></i
+                    ></a>
+                    <a
+                      target="_blank"
+                      href="https://instagram.com/fabcodingzest/"
+                      ><i class="mr-2 fab fa-instagram"></i
+                    ></a>
+                    <a
+                      target="_blank"
+                      href="https://www.twitter.com/fabcodingzest/"
+                      ><i class="mr-2 fab fa-twitter-square"></i
+                    ></a>
+                    <a target="_blank" href="https://github.com/fabcodingzest/"
+                      ><i class="mr-2 fab fa-github"></i
+                    ></a>
+                    <a target="_blank" href="mailto:fabcodingzest@gmail.com"
+                      ><i class="fas fa-envelope"></i
+                    ></a>
                   </p>
                 </div>
               </div>
@@ -450,11 +491,25 @@
                     >Contributor, TradeByte</small
                   >
                   <p class="text-gray-800 text-2xl truncate">
-                    <a target="_blank" href="https://www.linkedin.com/in/somyaranjanrout/"><i class="mr-2 fab fa-linkedin"></i></a>
-                    <a target="_blank" href="https://www.instagram.com/somyaranjan_26/""><i class="mr-2 fab fa-instagram"></i></a>
-                    <a target="_blank" href="https://twitter.com/somyaranjancr7"><i class="mr-2 fab fa-twitter-square"></i></a>
-                    <a target="_blank" href="https://github.com/somyaranjan26"><i class="mr-2 fab fa-github"></i></a>
-                    <a target="_blank" href="mailto:somyaranjanmac1@gmail.com"><i class="fas fa-envelope"></i></a>
+                    <a
+                      target="_blank"
+                      href="https://www.linkedin.com/in/somyaranjanrout/"
+                      ><i class="mr-2 fab fa-linkedin"></i
+                    ></a>
+                    <a
+                      target="_blank"
+                      href="https://www.instagram.com/somyaranjan_26/"
+                      ><i class="mr-2 fab fa-instagram"></i
+                    ></a>
+                    <a target="_blank" href="https://twitter.com/somyaranjancr7"
+                      ><i class="mr-2 fab fa-twitter-square"></i
+                    ></a>
+                    <a target="_blank" href="https://github.com/somyaranjan26"
+                      ><i class="mr-2 fab fa-github"></i
+                    ></a>
+                    <a target="_blank" href="mailto:somyaranjanmac1@gmail.com"
+                      ><i class="fas fa-envelope"></i
+                    ></a>
                   </p>
                 </div>
               </div>
@@ -478,9 +533,17 @@
                     >Contributor, TradeByte</small
                   >
                   <p class="text-gray-800 text-2xl truncate">
-                    <a target="_blank" href="https://www.linkedin.com/in/garima-singh-190b35170/"><i class="mr-2 fab fa-linkedin"></i></a>
-                    <a target="_blank" href="https://github.com/garimasingh22"><i class="mr-2 fab fa-github"></i></a>
-                    <a target="_blank" href="mailto:10garima22ii@gmail.com"><i class="fas fa-envelope"></i></a>
+                    <a
+                      target="_blank"
+                      href="https://www.linkedin.com/in/garima-singh-190b35170/"
+                      ><i class="mr-2 fab fa-linkedin"></i
+                    ></a>
+                    <a target="_blank" href="https://github.com/garimasingh22"
+                      ><i class="mr-2 fab fa-github"></i
+                    ></a>
+                    <a target="_blank" href="mailto:10garima22ii@gmail.com"
+                      ><i class="fas fa-envelope"></i
+                    ></a>
                   </p>
                 </div>
               </div>
@@ -504,8 +567,12 @@
                     >Contributor, TradeByte</small
                   >
                   <p class="text-gray-800 text-2xl truncate">
-                    <a target="_blank" href="https://github.com/somyaranjan26"><i class="mr-2 fab fa-github"></i></a>
-                    <a target="_blank" href="https://github.com/Anjalikumari148"><i class="fas fa-envelope"></i></a>
+                    <a target="_blank" href="https://github.com/somyaranjan26"
+                      ><i class="mr-2 fab fa-github"></i
+                    ></a>
+                    <a target="_blank" href="https://github.com/Anjalikumari148"
+                      ><i class="fas fa-envelope"></i
+                    ></a>
                   </p>
                 </div>
               </div>
@@ -529,10 +596,22 @@
                     >Contributor, TradeByte</small
                   >
                   <p class="text-gray-800 text-2xl truncate">
-                    <a target="_blank" href="https://www.linkedin.com/in/ankit-pal-632a72109/"><i class="mr-2 fab fa-linkedin"></i></a>
-                    <a target="_blank" href="https://www.instagram.com/howdy_ankit/""><i class="mr-2 fab fa-instagram"></i></a>
-                    <a target="_blank" href="https://github.com/howdyAnkit"><i class="mr-2 fab fa-github"></i></a>
-                    <a target="_blank" href="mailto:palankit35@gmail.com"><i class="fas fa-envelope"></i></a>
+                    <a
+                      target="_blank"
+                      href="https://www.linkedin.com/in/ankit-pal-632a72109/"
+                      ><i class="mr-2 fab fa-linkedin"></i
+                    ></a>
+                    <a
+                      target="_blank"
+                      href="https://www.instagram.com/howdy_ankit/"
+                      ><i class="mr-2 fab fa-instagram"></i
+                    ></a>
+                    <a target="_blank" href="https://github.com/howdyAnkit"
+                      ><i class="mr-2 fab fa-github"></i
+                    ></a>
+                    <a target="_blank" href="mailto:palankit35@gmail.com"
+                      ><i class="fas fa-envelope"></i
+                    ></a>
                   </p>
                 </div>
               </div>
@@ -560,12 +639,19 @@
 
         <div class="flex justify-center items-center md:ml-6">
           <div class="bg-white rounded-lg mt-4 md:mt-0">
-            <a
+            <button
+              onClick="openModal()"
+              class="w-full p-3 text-sm bg-red-700 rounded-lg font-semibold uppercase px-6 lg:px-10"
+              href="#"
+            >
+              SignUp
+            </button>
+            <!-- <a
               href="/user/signup"
               class="w-full p-3 text-sm bg-red-700 rounded-lg font-semibold uppercase px-6 lg:px-10"
             >
               SignUp
-            </a>
+            </a> -->
           </div>
         </div>
       </div>
@@ -573,6 +659,7 @@
       <hr class="h-px mt-6 bg-gray-700 border-none" />
 
       <div
+        id="contact"
         class="flex flex-col text-xs md:text-sm items-center justify-between mt-6 md:flex-row"
       >
         <div class="text-center md:text-left">
@@ -582,9 +669,9 @@
         </div>
         <div class="flex mt-4 md:m-0 items-start">
           <div class="-mx-4 text-center md:text-right">
-            <p class="text-base mb-2">&copy; Copyright TradeByte Team, 2020</p>
+            <p class="text-base mb-1">&copy; Copyright TradeByte Team, 2020</p>
             <hr class="my-2 bg-gray-700 border-none" />
-            <p>
+            <p class="text-base">
               Check and Star ❤️
               <a
                 target="_blank"
